2006-11-01  Akim Demaille  <akim@lrde.epita.fr>

	Initialize MAINTAINERCLEANFILES.
	* src/liburbi/Makefile.am: since that's now what uobject.mk uses.

2006-10-31  Akim Demaille  <demaille@gostai.com>

	Don't provide a Makefile.am for uobject/
	* src/liburbi/uobject/Makefile.am: Rename as...
	* src/liburbi/uobject/uobject.mk: this.
	Adjust to be includable.
	We no longer need to produce a libuobject.
	We no longer need pthread stuff either.
	* src/liburbi/Makefile.am, configure.ac: Adjust.

2006-10-31  Akim Demaille  <demaille@gostai.com>

	Move some liburbi's uobject files into liburbi
	* src/liburbi/uobject/uobject.cc, 
	* src/liburbi/uobject/uvar.cc,
	* src/liburbi/uobject/uexternal.h:
	Move to...
	* src/liburbi/uobject.cc,
	* src/liburbi/uvar.cc,
	* src/liburbi/uexternal.h:
	here.

	* src/liburbi/uobject/common_uvalue.cc: Rename as...
	* src/liburbi/uobject/uvalue-common.cc: New.

	* src/liburbi/Makefile.am, src/liburbi/uobject/Makefile.am: Adjust.

	* src/liburbi/uconversion.cpp: We don't need to include jerror.h.
	And now jpeglib.h already provide external "C".

2006-10-31  Akim Demaille  <demaille@gostai.com>

	jpeg-6b is now a subpackage
	* configure.ac: Adjust to the previous checkin.

2006-10-31  Akim Demaille  <demaille@gostai.com>

	use libjpeg-6 via externals
	* jpeg-6b: Remove.
	* jpeg-6b/filelist.doc: Remove.
	* jpeg-6b/jmemansi.c: Remove.
	* jpeg-6b/jchuff.c: Remove.
	* jpeg-6b/djpeg.1: Remove.
	* jpeg-6b/coderules.doc: Remove.
	* jpeg-6b/jmemmac.c: Remove.
	* jpeg-6b/jchuff.h: Remove.
	* jpeg-6b/transupp.c: Remove.
	* jpeg-6b/ltmain.sh: Remove.
	* jpeg-6b/jcparam.c: Remove.
	* jpeg-6b/transupp.h: Remove.
	* jpeg-6b/jquant1.c: Remove.
	* jpeg-6b/ltconfig: Remove.
	* jpeg-6b/jconfig.bcc: Remove.
	* jpeg-6b/jcphuff.c: Remove.
	* jpeg-6b/wrjpgcom.c: Remove.
	* jpeg-6b/jcmarker.c: Remove.
	* jpeg-6b/jcsample.c: Remove.
	* jpeg-6b/jmemmgr.c: Remove.
	* jpeg-6b/jdmarker.c: Remove.
	* jpeg-6b/jdsample.c: Remove.
	* jpeg-6b/rdcolmap.c: Remove.