@@ -1,5 +1,13 @@
 2006-11-01  Akim Demaille  <akim@lrde.epita.fr>
 
+	uobject.h -> uobject.hh
+	* src/liburbi/uconversion.h: Adjust.
+	* src/liburbi/uvar.cc: Adjust.
+	* src/liburbi/uconversion.cpp: Adjust.
+	* src/liburbi/uabstractclient.h: Adjust.
+
+2006-11-01  Akim Demaille  <akim@lrde.epita.fr>
+
 	Initialize MAINTAINERCLEANFILES.
 	* src/liburbi/Makefile.am: since that's now what uobject.mk uses.
 
